Fix margin and alignment

--- a/static/styles.css
+++ b/static/styles.css
@@ -17,7 +17,8 @@ img {
 
 .flex-container {
     max-width: 90%;
-    margin: 20px;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -45,7 +46,8 @@ img {
     display: flex;
     margin: 20px;
     padding: 20px;
-    width: 300px;
+    width: 225px;
+    max-width: 300px;
     height: 100px;
     border-style: solid;
     border-radius: 75px;
@@ -65,22 +67,23 @@ img {
 
 .tooltip .tooltiptext {
     visibility: hidden;
-    width: 250px;
+    width: 0px;
     border-style: solid;
     border-color: rgba(25,25,25,1);
     background-color: rgba(75,75,75,0.9);
     color: #fff;
     text-align: center;
-    padding: 5px;
-    border-radius: 6px;
  
     position: absolute;
     z-index: 1;
 
-    top: -5px;
-    left: 105%;
+    top: -100px;
+    left: 5%;
 }
 
 .tooltip:hover .tooltiptext {
     visibility: visible;
+    width: inherit;
+    border-radius: 75px;
+    padding: 25px;
 }
